-Added fix to angular controllers to parse strings to ints in the mission order controller (for the mission order id) and the mission edit screen (for the launch specificity). For some reason, the production server returns these values as strings instead of as ints. If the values are already ints, they'll simply be parsed back into their current value.
-Updated a couple npm packages, so the package.json file changed.

--- a/resources/assets/javascript/angular/directives/countdown/countdown.html
+++ b/resources/assets/javascript/angular/directives/countdown/countdown.html
@@ -22,7 +22,7 @@
 </table>
 <table class="countdown" ng-if="type == 'classic' && isPaused && !isVisibleWhenPaused">
     <tr>
-        <td class="value">Pauseds</td>
+        <td class="value">Paused</td>
     </tr>
 </table>
 <table class="countdown live" ng-class="{ 't-minus-zero': tMinusZero }" ng-if="type == 'live' && (!isPaused || isVisibleWhenPaused)">
@@ -36,6 +36,6 @@
 </table>
 <table class="countdown live" ng-if="type == 'live' && isPaused">
     <tr>
-        <td>Pauseds</td>
+        <td>Paused</td>
     </tr>
 </table>
